# patlytics

./: Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/: app.py
frontend/: app.js  app.ts  index.html  styles.css
src/patlytics/: app.py
