[project]
name = "patlytics"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "davidyang", email = "jackdavid90767@gmail.com"},
]
dependencies = ["fastapi>=0.115.5", "uvicorn>=0.32.1", "openai==0.28"]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
